Add RTV cooldown, unrtv command, and vote handling

--- a/resources/translations/en.jsonc
+++ b/resources/translations/en.jsonc
@@ -2,6 +2,10 @@
   "map_chooser.prefix": "[green][MapChooser][default]",
   "map_chooser.rtv.voted": "[green]{0}[default] has voted to Rock The Vote. ({1}/{2} votes needed)",
   "map_chooser.rtv.already_voted": "You have already voted to Rock The Vote.",
+  "map_chooser.rtv.vote_removed": "You have removed your RTV vote.",
+  "map_chooser.rtv.vote_cancelled": "The RTV vote has been cancelled.",
+  "map_chooser.rtv.cooldown": "RTV is currently on cooldown. Please wait {0} seconds.",
+  "map_chooser.rtv.not_voted": "You have not voted to Rock The Vote.",
   "map_chooser.vote.started": "Rock The Vote has started! Please vote for the next map.",
   "map_chooser.vote.title": "Vote for the next map:",
   "map_chooser.vote.you_voted": "You voted for [green]{0}[default].",
