Add admin mapsvote command and menu improvements [build]
Introduce new !mapsvote command for admins to select multiple maps and start custom votes. Add menu auto-close functionality after selections in nominate, votemap, setnextmap, and vote menus. Add configurable permissions for admin commands.

--- a/resources/translations/en.jsonc
+++ b/resources/translations/en.jsonc
@@ -41,5 +41,7 @@
   "map_chooser.extend.vote_passed": "Voting ended. The current map will be [green]extended[default]. ({0} votes)",
   "map_chooser.vote.map_extended_time": "Current map extended by [green]{0}[default] minutes. ({1} extends left)",
   "map_chooser.vote.map_extended_rounds": "Current map extended by [green]{0}[default] rounds. ({1} extends left)",
-  "map_chooser.vote.map_extended_both": "Current map extended by [green]{0}[default] minutes and [green]{1}[default] rounds. ({2} extends left)"
+  "map_chooser.vote.map_extended_both": "Current map extended by [green]{0}[default] minutes and [green]{1}[default] rounds. ({2} extends left)",
+  "map_chooser.admin_vote.title": "Select Maps for Vote:",
+  "map_chooser.admin_vote.start": "START VOTE"
 }
