--- a/resources/translations/pt-BR.jsonc
+++ b/resources/translations/pt-BR.jsonc
@@ -1,11 +1,11 @@
 {
   "map_chooser.prefix": "[green][MapChooser][default]",
-  "map_chooser.rtv.voted": "[green]{0}[default] votou para alterar o mapa. ({1}/{2} votos necessários)",
-  "map_chooser.rtv.already_voted": "Você já votou para alterar o mapa.",
-  "map_chooser.rtv.vote_removed": "Você removeu seu voto para alterar o mapa.",
-  "map_chooser.rtv.vote_cancelled": "A votação para alterar o mapa foi cancelada.",
-  "map_chooser.rtv.cooldown": "A votação para alterar o mapa está em cooldown. Aguarde {0} segundos.",
-  "map_chooser.rtv.not_voted": "Você não votou para alterar o mapa.",
+  "map_chooser.rtv.voted": "[green]{0}[default] votou para mudar o mapa. ({1}/{2} votos necessários)",
+  "map_chooser.rtv.already_voted": "Você já votou para mudar o mapa.",
+  "map_chooser.rtv.vote_removed": "Você removeu seu voto para mudar o mapa.",
+  "map_chooser.rtv.vote_cancelled": "A votação para mudar o mapa foi cancelada.",
+  "map_chooser.rtv.cooldown": "A votação para mudar o mapa está cooldown. Aguarde {0} segundos.",
+  "map_chooser.rtv.not_voted": "Você não votou para mudar o mapa.",
   "map_chooser.vote.started": "A votação começou! Vote no próximo mapa.",
   "map_chooser.vote.title": "Vote no próximo mapa:",
   "map_chooser.vote.you_voted": "Você votou em [green]{0}[default].",
@@ -28,18 +28,20 @@
   "map_chooser.timeleft.remaining_time_second": "Tempo restante {0} segundo(s)",
   "map_chooser.timeleft.no_time_limit": "Não há limite de tempo",
   "map_chooser.timeleft.last_round": "Este é o último round",
-  "map_chooser.timeleft.time_over": "O tempo acabou, este é o último round",
+  "map_chooser.timeleft.time_over": "Tempo acabou, este é o último round",
   "map_chooser.timeleft.remaining_rounds": "{0} round(s) restantes",
   "map_chooser.general.validation.warmup": "Comando desativado durante o aquecimento.",
-  "map_chooser.general.validation.spectator": "Você não pode votar enquanto estiver como espectador.",
+  "map_chooser.general.validation.spectator": "Você não pode votar enquanto estiver como spectador.",
   "map_chooser.revote.no_vote_active": "Não há votação de mapa ativa no momento.",
   "map_chooser.setnextmap.title": "Definir próximo mapa:",
   "map_chooser.extend_option": "Estender mapa atual",
-  "map_chooser.extend.no_extends_left": "O mapa atingiu o número máximo de extensões.",
+  "map_chooser.extend.no_extends_left": "Mapa atingiu o número máximo de extensões.",
   "map_chooser.extend.voted": "[green]{0}[default] votou para estender o mapa atual. ({1}/{2} votos necessários)",
   "map_chooser.extend.already_voted": "Você já votou para estender o mapa atual.",
   "map_chooser.extend.vote_passed": "Votação encerrada. O mapa atual será [green]estendido[default]. ({0} votos)",
   "map_chooser.vote.map_extended_time": "Mapa atual estendido em [green]{0}[default] minutos. ({1} extensões restantes)",
   "map_chooser.vote.map_extended_rounds": "Mapa atual estendido em [green]{0}[default] rounds. ({1} extensões restantes)",
-  "map_chooser.vote.map_extended_both": "Mapa atual estendido em [green]{0}[default] minutos e [green]{1}[default] rounds. ({2} extensões restantes)"
+  "map_chooser.vote.map_extended_both": "Mapa atual estendido em [green]{0}[default] minutos e [green]{1}[default] rounds. ({2} extensões restantes)",
+  "map_chooser.admin_vote.title": "Selecionar mapas para votação:",
+  "map_chooser.admin_vote.start": "INICIAR VOTAÇÃO"
 }
